feat : Menu list
* Menu List : 메뉴 테이블을 생성하여 데이터베이스에 추가하고, 리스트 클릭시 메뉴를 확인할 수 있게 설정하였음.

--- a/app/src/main/res/layout/item_list.xml
+++ b/app/src/main/res/layout/item_list.xml
@@ -2,13 +2,15 @@
 
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:context=".ui.ListActivity">
 
     <LinearLayout
+        android:id="@+id/item_container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        tools:context=".ListActivity">
+        android:background="@drawable/selector"
+        android:orientation="horizontal">
 
         <ImageView
             android:id="@+id/item_image"
