--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <drawable name="item_background_p">#eaeaea</drawable>
+    <drawable name="item_background_n">#cfcfcf</drawable>
 </resources>
