--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,32 +16,30 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginStart="34dp"
-            android:layout_marginTop="64dp"
+            android:layout_marginTop="245dp"
             android:layout_marginEnd="24dp"
             android:layout_marginBottom="20dp"
-            android:fontFamily="@font/nanumgothic"
-            android:text="어떤 종류?"
-            android:textColor="@color/black"
-            android:textSize="20sp"
+            android:fontFamily="@font/context"
+            android:text="님아 뭐 드실?"
+            android:textColor="@color/main"
+            android:textSize="35sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toTopOf="@+id/chip_group"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.071"
+            app:layout_constraintHorizontal_bias="0.464"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.886" />
 
         <com.google.android.material.chip.ChipGroup
             android:id="@+id/chip_group"
-            android:layout_width="wrap_content"
+            android:layout_width="210dp"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginStart="34dp"
-            android:layout_marginTop="20dp"
-            android:layout_marginEnd="24dp"
-            app:chipSpacingHorizontal="70dp"
+            android:layout_marginTop="43dp"
+            app:chipSpacingHorizontal="30dp"
             app:chipSpacingVertical="5dp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.589"
+            app:layout_constraintHorizontal_bias="0.497"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView"
             app:singleSelection="false">
@@ -53,7 +51,8 @@
                 android:layout_height="wrap_content"
                 android:checkable="true"
                 android:checked="false"
-                android:text="한식" />
+                android:text="한식"
+                android:textAppearance="@style/customChipGroupFontStyle" />
 
             <com.google.android.material.chip.Chip
                 android:id="@+id/chip_china"
@@ -62,7 +61,8 @@
                 android:layout_height="wrap_content"
                 android:checkable="true"
                 android:checked="false"
-                android:text="중식" />
+                android:text="중식"
+                android:textAppearance="@style/customChipGroupFontStyle" />
 
             <com.google.android.material.chip.Chip
                 android:id="@+id/chip_japan"
@@ -71,16 +71,9 @@
                 android:layout_height="wrap_content"
                 android:checkable="true"
                 android:checked="false"
-                android:text="일식" />
+                android:text="일식"
+                android:textAppearance="@style/customChipGroupFontStyle" />
 
-            <com.google.android.material.chip.Chip
-                android:id="@+id/chip_drink"
-                style="@style/Widget.MaterialComponents.Chip.Choice"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:checkable="true"
-                android:checked="false"
-                android:text="술집" />
 
             <com.google.android.material.chip.Chip
                 android:id="@+id/chip_europe"
@@ -89,7 +82,8 @@
                 android:layout_height="wrap_content"
                 android:checkable="true"
                 android:checked="false"
-                android:text="양식" />
+                android:text="양식"
+                android:textAppearance="@style/customChipGroupFontStyle" />
 
             <com.google.android.material.chip.Chip
                 android:id="@+id/chip_snack"
@@ -98,20 +92,31 @@
                 android:layout_height="wrap_content"
                 android:checkable="true"
                 android:checked="false"
-                android:text="분식" />
+                android:text="분식"
+                android:textAppearance="@style/customChipGroupFontStyle" />
+
+            <com.google.android.material.chip.Chip
+                android:id="@+id/chip_drink"
+                style="@style/Widget.MaterialComponents.Chip.Choice"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:checkable="true"
+                android:checked="false"
+                android:text="술집"
+                android:textAppearance="@style/customChipGroupFontStyle" />
 
         </com.google.android.material.chip.ChipGroup>
 
         <Button
             android:id="@+id/pickBtn"
-            android:layout_width="wrap_content"
+            android:layout_width="230dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_marginStart="129dp"
-            android:layout_marginTop="20dp"
-            android:layout_marginEnd="129dp"
-            android:text="뭘 먹을까?"
+            android:layout_marginTop="47dp"
+            android:fontFamily="@font/context"
+            android:text="돌려보자"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.495"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/chip_group" />
 
@@ -119,12 +124,13 @@
             android:id="@+id/listBtn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="75dp"
+            android:fontFamily="@font/context"
             android:text="어떤게 있을까?"
+            android:visibility="gone"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.498"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/pickBtn" />
+            tools:layout_editor_absoluteY="667dp" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
