--- a/app/src/main/res/layout/activity_result.xml
+++ b/app/src/main/res/layout/activity_result.xml
@@ -22,28 +22,31 @@
         android:orientation="vertical">
 
         <TextView
-            android:id="@+id/content"
+            android:id="@+id/tvTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginStart="96dp"
-            android:layout_marginTop="74dp"
+            android:layout_marginTop="200dp"
             android:layout_marginEnd="96dp"
-            android:fontFamily="@font/nanumgothic"
-            android:text="오늘은 이 메뉴 어떠세요?"
-            android:textColor="@color/black"
-            android:textSize="20sp"
+            android:fontFamily="@font/context"
+            android:visibility="gone"
+            android:text="이거나 드실?"
+            android:textColor="#A3000000"
+            android:textSize="35dp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.49"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <ImageView
             android:id="@+id/ivRotate"
-            android:layout_width="120dp"
-            android:layout_height="120dp"
+            android:layout_width="260dp"
+            android:layout_height="260dp"
             android:layout_gravity="center"
-            android:src="@mipmap/ic_food_round"
+            android:visibility="visible"
+            android:src="@drawable/logot"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
@@ -51,101 +54,98 @@
             app:layout_constraintTop_toTopOf="parent" />
 
 
-        <androidx.cardview.widget.CardView
-            android:id="@+id/result"
+        <LinearLayout
+            android:id="@+id/layoutText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="156dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginEnd="157dp"
+            android:orientation="horizontal"
             android:visibility="gone"
-            android:layout_width="250dp"
-            android:layout_height="250dp"
-            app:cardCornerRadius="10dp"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
+            app:layout_constraintTop_toBottomOf="@+id/tvTitle">
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginStart="5dp"
-                android:orientation="vertical">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/context"
+                android:hint="가게 이름"
+                android:text="@{food.name}"
+                android:textColor="#A3000000"
+                android:textSize="25sp"
+                android:textStyle="bold" />
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="5dp"
-                    android:orientation="horizontal">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginStart="10dp"
+                android:fontFamily="@font/context"
+                android:hint="가게 종류"
+                android:text="@{food.type}"
+                android:textColor="#A3000000"
+                android:textSize="15sp" />
 
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@{food.name}"
-                        android:hint="가게 이름"
-                        android:textSize="25sp"
-                        android:textColor="@color/black"
-                        android:textStyle="bold" />
+        </LinearLayout>
 
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:textColor="@color/black"
-                        android:layout_marginStart="10dp"
-                        android:textSize="15sp"
-                        android:text="@{food.type}"
-                        android:hint="가게 종류"/>
-
-                </LinearLayout>
-
-                <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/rcv_menu"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="8dp"
-                    android:layout_marginBottom="5dp"/>
-
-            </LinearLayout>
-
-        </androidx.cardview.widget.CardView>
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rcvMenu"
+            android:layout_width="250dp"
+            android:layout_height="200dp"
+            android:visibility="gone"
+            android:layout_marginStart="0dp"
+            android:layout_marginTop="15dp"
+            android:layout_marginEnd="0dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/layoutText"
+            tools:listitem="@layout/item_menu_list" />
 
         <Button
             android:id="@+id/btnRestart"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
-            android:layout_marginTop="185dp"
-            android:layout_marginEnd="150dp"
-            android:text="다시 돌리기"
+            android:layout_marginStart="36dp"
+            android:layout_marginTop="12dp"
+            android:layout_marginEnd="8dp"
+            android:fontFamily="@font/context"
+            android:text="종류 다시 정할래"
             android:visibility="gone"
-            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/btnInfo"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/ivRotate" />
+            app:layout_constraintTop_toBottomOf="@+id/btnRedecide" />
 
         <Button
-            android:id="@+id/btnWebView"
+            android:id="@+id/btnInfo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="149dp"
-            android:layout_marginTop="185dp"
-            android:layout_marginEnd="10dp"
-            android:text="정보 자세히 보기"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="12dp"
+            android:layout_marginEnd="60dp"
+            android:fontFamily="@font/context"
+            android:text="자세히 보자"
             android:visibility="gone"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/ivRotate" />
+            app:layout_constraintStart_toEndOf="@+id/btnRestart"
+            app:layout_constraintTop_toBottomOf="@+id/btnRedecide" />
 
         <Button
             android:id="@+id/btnRedecide"
-            android:layout_width="wrap_content"
+            android:layout_width="180dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="135dp"
+            android:layout_marginTop="21dp"
             android:layout_marginEnd="135dp"
-            android:layout_marginBottom="48dp"
-            android:text="빼고 다시 돌리기"
-            android:visibility="visible"
-            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginBottom="12dp"
+            android:fontFamily="@font/context"
+            android:text="이거 말고"
+            android:visibility="gone"
+            app:layout_constraintBottom_toTopOf="@+id/btnRestart"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="parent" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/rcvMenu" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
