--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="main">#A3000000</color>
 
     <drawable name="item_background_p">#eaeaea</drawable>
     <drawable name="item_background_n">#cfcfcf</drawable>
