--- a/app/src/main/res/layout/activity_result.xml
+++ b/app/src/main/res/layout/activity_result.xml
@@ -21,31 +21,11 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/tvTitle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginStart="96dp"
-            android:layout_marginTop="200dp"
-            android:layout_marginEnd="96dp"
-            android:fontFamily="@font/context"
-            android:visibility="gone"
-            android:text="이거나 드실?"
-            android:textColor="#A3000000"
-            android:textSize="35dp"
-            android:textStyle="bold"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.49"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
         <ImageView
             android:id="@+id/ivRotate"
             android:layout_width="260dp"
             android:layout_height="260dp"
             android:layout_gravity="center"
-            android:visibility="visible"
             android:src="@drawable/logot"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -53,25 +33,39 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
+        <TextView
+            android:id="@+id/tvTitle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:fontFamily="@font/context"
+            android:text="이거나 드실?"
+            android:textColor="#A3000000"
+            android:layout_marginBottom="20dp"
+            android:textSize="30sp"
+            android:textStyle="bold"
+            android:visibility="visible"
+            app:layout_constraintBottom_toTopOf="@id/layoutText"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
 
         <LinearLayout
             android:id="@+id/layoutText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="156dp"
-            android:layout_marginTop="20dp"
-            android:layout_marginEnd="157dp"
+            android:layout_marginBottom="20dp"
             android:orientation="horizontal"
-            android:visibility="gone"
+            android:visibility="visible"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tvTitle">
+            app:layout_constraintBottom_toTopOf="@id/rcvMenu">
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/context"
-                android:hint="가게 이름"
+                android:hint="감성반점"
+                android:gravity="center"
                 android:text="@{food.name}"
                 android:textColor="#A3000000"
                 android:textSize="25sp"
@@ -81,71 +75,82 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:layout_marginStart="10dp"
+                android:layout_marginStart="15dp"
                 android:fontFamily="@font/context"
-                android:hint="가게 종류"
+                android:hint="중식"
                 android:text="@{food.type}"
                 android:textColor="#A3000000"
                 android:textSize="15sp" />
 
         </LinearLayout>
 
+        <TextView
+            android:id="@+id/item_empty"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/context"
+            android:visibility="visible"
+            app:layout_constraintBottom_toTopOf="@id/btnRedecide"
+            app:layout_constraintTop_toBottomOf="@+id/layoutText"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
+
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rcvMenu"
-            android:layout_width="250dp"
-            android:layout_height="200dp"
-            android:visibility="gone"
-            android:layout_marginStart="0dp"
-            android:layout_marginTop="15dp"
-            android:layout_marginEnd="0dp"
+            android:layout_width="match_parent"
+            android:layout_height="180dp"
+            android:layout_marginStart="30dp"
+            android:layout_marginEnd="30dp"
+            android:visibility="visible"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/layoutText"
+            app:layout_constraintTop_toTopOf="parent"
             tools:listitem="@layout/item_menu_list" />
 
-        <Button
-            android:id="@+id/btnRestart"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="36dp"
-            android:layout_marginTop="12dp"
-            android:layout_marginEnd="8dp"
-            android:fontFamily="@font/context"
-            android:text="종류 다시 정할래"
-            android:visibility="gone"
-            app:layout_constraintEnd_toStartOf="@+id/btnInfo"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/btnRedecide" />
-
-        <Button
-            android:id="@+id/btnInfo"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="12dp"
-            android:layout_marginEnd="60dp"
-            android:fontFamily="@font/context"
-            android:text="자세히 보자"
-            android:visibility="gone"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/btnRestart"
-            app:layout_constraintTop_toBottomOf="@+id/btnRedecide" />
 
         <Button
             android:id="@+id/btnRedecide"
             android:layout_width="180dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="135dp"
             android:layout_marginTop="21dp"
-            android:layout_marginEnd="135dp"
-            android:layout_marginBottom="12dp"
+            android:background="#00ff0000"
+            android:textColor="@color/main"
             android:fontFamily="@font/context"
             android:text="이거 말고"
-            android:visibility="gone"
-            app:layout_constraintBottom_toTopOf="@+id/btnRestart"
+            android:textStyle="bold"
+            android:visibility="visible"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/rcvMenu" />
+
+        <Button
+            android:id="@+id/btnInfo"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/context"
+            android:background="#00ff0000"
+            android:textColor="@color/main"
+            android:text="자세히 보자"
+            android:textStyle="bold"
+            android:visibility="visible"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/btnRedecide" />
+
+        <Button
+            android:id="@+id/btnRestart"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="#00ff0000"
+            android:textColor="@color/main"
+            android:fontFamily="@font/context"
+            android:text="종류 다시 정할래"
+            android:textStyle="bold"
+            android:visibility="visible"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/btnInfo" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
