feat : anyway menu
* 아무거나 버튼을 추가하고 정상 작동 확인하였음.
* 데이터베이스 추가 완료(3/11)

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,7 @@
         android:orientation="vertical">
 
         <TextView
-            android:id="@+id/textView"
+            android:id="@+id/title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
@@ -25,6 +25,18 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintHorizontal_bias="0.5"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="5dp"
+            android:fontFamily="@font/context"
+            android:textSize="8sp"
+            android:text="음식점 사정에 따라 메뉴, 가격등이 변동될 수 있으니 유의해주세요."
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/title" />
 
         <com.google.android.material.chip.ChipGroup
             android:id="@+id/chip_group"
@@ -100,6 +112,26 @@
                 android:text="술집"
                 android:textAppearance="@style/customChipGroupFontStyle" />
 
+            <com.google.android.material.chip.Chip
+                android:id="@+id/chip_chicken"
+                style="@style/Widget.MaterialComponents.Chip.Choice"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:checkable="true"
+                android:checked="false"
+                android:text="치킨"
+                android:textAppearance="@style/customChipGroupFontStyle" />
+
+            <com.google.android.material.chip.Chip
+                android:id="@+id/chip_fastFood"
+                style="@style/Widget.MaterialComponents.Chip.Choice"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:checkable="true"
+                android:checked="false"
+                android:text="패스트푸드"
+                android:textAppearance="@style/customChipGroupFontStyle" />
+
         </com.google.android.material.chip.ChipGroup>
 
         <Button
@@ -111,11 +143,25 @@
             android:fontFamily="@font/context"
             android:text="돌려보자"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.495"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/chip_group" />
 
-<!--        <Button-->
+        <Button
+            android:id="@+id/anyBtn"
+            android:layout_width="220dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="10dp"
+            android:fontFamily="@font/context"
+            android:text="아무거나"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/pickBtn" />
+
+
+
+
+        <!--        <Button-->
 <!--            android:id="@+id/listBtn"-->
 <!--            android:layout_width="wrap_content"-->
 <!--            android:layout_height="wrap_content"-->
